Updates from Overleaf

--- a/paper.bib
+++ b/paper.bib
@@ -1890,3 +1890,50 @@ Copy to ClipboardDownload
     url = {https://alice-publications.web.cern.ch/node/6814},
     year = "2021"
 }
+
+@article{CMS:2013ycn,
+    author = "Chatrchyan, Serguei and others",
+    collaboration = "CMS",
+    title = "{Jet and Underlying Event Properties as a Function of Charged-Particle Multiplicity in Proton\textendash{}Proton Collisions at $\sqrt{s}$ = 7 TeV}",
+    eprint = "1310.4554",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ex",
+    reportNumber = "CMS-FSQ-12-022, CERN-PH-EP-2013-195",
+    doi = "10.1140/epjc/s10052-013-2674-5",
+    journal = "Eur. Phys. J. C",
+    volume = "73",
+    number = "12",
+    pages = "2674",
+    year = "2013"
+}
+% ZYAM assumption
+@article{ATLAS:2012cix,
+    author = "Aad, Georges and others",
+    collaboration = "ATLAS",
+    title = "{Observation of Associated Near-Side and Away-Side Long-Range Correlations in $\sqrt{s_{NN}}$=5.02  TeV Proton-Lead Collisions with the ATLAS Detector}",
+    eprint = "1212.5198",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ex",
+    reportNumber = "CERN-PH-EP-2012-366",
+    doi = "10.1103/PhysRevLett.110.182302",
+    journal = "Phys. Rev. Lett.",
+    volume = "110",
+    number = "18",
+    pages = "182302",
+    year = "2013"
+}
+@article{ATLAS:2014qaj,
+    author = "Aad, Georges and others",
+    collaboration = "ATLAS",
+    title = "{Measurement of long-range pseudorapidity correlations and azimuthal harmonics in $\sqrt{s_{NN}}=5.02$ TeV proton-lead collisions with the ATLAS detector}",
+    eprint = "1409.1792",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ex",
+    reportNumber = "CERN-PH-EP-2014-201",
+    doi = "10.1103/PhysRevC.90.044906",
+    journal = "Phys. Rev. C",
+    volume = "90",
+    number = "4",
+    pages = "044906",
+    year = "2014"
+}
