--- a/sec_results.tex
+++ b/sec_results.tex
@@ -83,7 +83,7 @@ This model describes well the multiplicity dependence of $v_2$ in p--Pb collisio
 	\includegraphics[width=0.45 \textwidth]{figures/Fig7_v2Mult_allSystemsATLAS.pdf} 
 	\includegraphics[width=0.425
 	\textwidth]{figures/IllustrationNchSources.pdf} 
-	\caption{Left: A comparison to ATLAS~\cite{Aaboud:2016yar} experiment of the $v_2$ magnitude for two different collision systems, pp and p-Pb, as a function of the ATLAS definition of multiplicity. Right:} 
+	\caption{Left: A comparison to ATLAS~\cite{Aaboud:2016yar} experiment of the $v_2$ magnitude for two different collision systems, pp and p-Pb, as a function of the ATLAS definition of multiplicity. Right: Illustration of sources of the measured multiplicity.} 
 	\label{fig:v2multATLAS}
 \end{figure}
 
@@ -100,4 +100,4 @@ As a lower bound for the size of a hydrodynamized
 system where mainly the particles are emitted around the initial elliptic shape exists as predicted in Ref.~\cite{Taghavi:2019mqz}, there will be an transition of the flow signal but with the current experimental uncertainties and method it is still challenging to test its limit.
 
 
-Another complication can arise from the different sources of the multiplicity between the models and data.  The previous mapping of ALICE multiplicity and ATLAS gives a naive way to compare the relative difference in multiplicities between two experiments but the measured $v_n$ might be averaged over different events. As illustrated in Fig.~\ref{fig:v2multATLAS} b, the relative jet (bulk) contribution depends on the measured $N_{ch}$. This results in lower $v_2$ value in average in low multiplicity events. While the data are compared to hydrodynamic model calculations, the difference in $N_{ch}$ should be taken into account carefully and this work need further thoughts.
+Another complication can arise from the different sources of the multiplicity between the models and data.  The previous mapping of ALICE multiplicity and ATLAS gives a naive way to compare the relative difference in multiplicities between two experiments but the measured $v_n$ might be averaged over different events. As illustrated on the right of Fig.~\ref{fig:v2multATLAS}, the relative jet and bulk particle's yields vary with the measured $N_{ch}$. This results in lower $v_2$ value on average in low multiplicity events. While the data are compared to hydrodynamic model calculations which contain only bulk particles, the difference in $N_{ch}$ should be taken into account carefully and this work need further investigations and leave it for future work because it requires adequate treatments of jet and bulk particle productions.
