--- a/sec_intro.tex
+++ b/sec_intro.tex
@@ -3,31 +3,29 @@
 \section{Introduction}
 \label{sec:intro}
 
-%Collective effects emerging from nucleus--nucleus collisions are known to give 
-%Collectivity induced by the pressure-driven expansion of quark-gluon plasma (QGP) in high-energy nucleus--nucleus collisions 
-High-energy nucleus--nucleus collisions exhibit strong collective response, observed through significant correlations between particles emitted over a wide pseudorapidity range at RHIC~\cite{Adams:2005dq,Adcox:2004mh,Arsene:2004fa,Back:2004je} and LHC~\cite{Abelev:2012di, Abelev:2014pua, ATLAS:2011ah}. The collective effects originate from the pressure-driven expansion of the strongly interacting quark-gluon plasma (QGP) that is formed at the extreme temperatures created in a collision event. This expansion is described by relativistic hydrodynamics~\cite{Romatschke:2007mq,Jeon:2015dfa,Romatschke:2017ejr}, for which the measurable correlations act as constraints for the transport properties of the QGP. The understanding of the transport properties has recently been significantly advanced through efforts in experimental~\cite{ALICE:2016kpq,Acharya:2017gsw,Acharya:2017zfg,Acharya:2020taj} and theoretical studies~\cite{Niemi:2015qia,Bernhard:2016tnd,Bernhard:2019bmu,Parkkila:2021tqq,Parkkila:2021yha}.
-
-%Significant correlations are observed between particles emitted over a wide pseudorapidity range in high-energy nucleus--nucleus collisions at RHIC~\cite{Adams:2005dq,Adcox:2004mh,Arsene:2004fa,Back:2004je} and LHC~\cite{Abelev:2012di, Abelev:2014pua, ATLAS:2011ah}. The origin of these observations are collective effects, which are related to the formation of a strongly interacting quark-gluon plasma (QGP), which exhibits hydrodynamic behavior (see the reviews~\cite{Romatschke:2007mq,Jeon:2015dfa,Romatschke:2017ejr}). Recent theoretical~\cite{Niemi:2015qia,Bernhard:2016tnd,Bernhard:2019bmu,Parkkila:2021tqq,Parkkila:2021yha} and experimental~\cite{ALICE:2016kpq,Acharya:2017gsw,Acharya:2017zfg,Acharya:2020taj} advancements have contributed significantly to the understanding of the transport properties of the QGP.
+High-energy nucleus--nucleus collisions exhibit strong collectivity, observed through significant correlations between particles emitted over a wide pseudorapidity range at RHIC~\cite{Adams:2005dq,Adcox:2004mh,Arsene:2004fa,Back:2004je} and LHC~\cite{Abelev:2012di, Abelev:2014pua, ATLAS:2011ah}. The collective effects originate from the pressure-driven expansion of the strongly interacting quark-gluon plasma (QGP) that is formed at the extreme temperatures created in a collision event. This expansion is described by relativistic hydrodynamics~\cite{Romatschke:2007mq,Jeon:2015dfa,Romatschke:2017ejr}, for which the measured correlations act as constraints for the transport properties of the QGP. The understanding of the transport properties has recently been significantly advanced through efforts in experimental~\cite{ALICE:2016kpq,Acharya:2017gsw,Acharya:2017zfg,Acharya:2020taj} and theoretical studies~\cite{Niemi:2015qia,Bernhard:2016tnd,Bernhard:2019bmu,Parkkila:2021tqq,Parkkila:2021yha}.
 
 Correspondingly, long-range correlations are also observed in smaller collision systems, particularly high-multiplicity proton--proton (pp)~\cite{Aad:2015gqa,Khachatryan:2015lva,Khachatryan:2016txc,Acharya:2019vdf}, proton--nucleus (pA)~\cite{Abelev:2012ola,Aad:2014lta,Aaboud:2016yar,Khachatryan:2016ibd}, and light nucleus--nucleus collisions~\cite{PHENIX:2018lia,Aidala:2017ajz}. The long pseudorapidity range of these correlations suggests that they originate from a very early stage of a collision, which in turn implies a hydrodynamic expansion of a medium created in these small systems. The small collision geometry in these systems entails a very short-lived medium of smaller volume, and it is not established in what extend the potential hydrodynamic behaviour contributes with respect to the flow-like signals produced by other mechanisms~\cite{Busza:2018rrf,Nagle:2018nvi}.
-%Similar long-range correlations are also observed in high-multiplicity proton--proton (pp)~\cite{Aad:2015gqa,Khachatryan:2015lva,Khachatryan:2016txc,Acharya:2019vdf}, proton--nucleus (pA)~\cite{Abelev:2012ola,Aad:2014lta,Aaboud:2016yar,Khachatryan:2016ibd}, and light nucleus--nucleus collisions~\cite{PHENIX:2018lia,Aidala:2017ajz}.
-%The fact that these correlations extend over a large range in pseudorapidity, implies that they originate from an early stage in these collisions and thus suggest that hydrodynamic behavior is present even in these small systems, although the volume and lifetime of the medium produced in such a collision system are expected to be small, and there are other mechanisms which can produce similar flow-like signals~\cite{Busza:2018rrf,Nagle:2018nvi}.
 
 On the theoretical side, these flow signals in high-multiplicity pp and p--Pb events have been attributed to initial-state or final-state effects. Initial-state effects, usually attributed to gluon saturation~\cite{Dusling:2012cg,Bzdak:2013zma}, can form long-range
 correlations along the longitudinal direction. The final-state effects might be parton-induced interactions~\cite{Arbuzov:2011yr} or collective phenomena due to hydrodynamic behavior of the produced matter arising in a high-density system possibly formed in these collisions~\cite{Weller:2017tsr,Zhao:2017rgg}. 
 Hybrid models implementing both effects are generally used in hydrodynamic simulations~\cite{Greif:2017bnr,Mantysaari:2017cni}. EPOS LHC describes collectivity in small systems with a parameterized hydrodynamic evolution of the high-energy density region, so called ``core'', formed by many color string fields~\cite{Pierog:2013ria}.
 The proton shape and its fluctuations are also important to model small systems~\cite{Mantysaari:2017cni}.
 To understand the influence of initial- or final-state effects, and to possibly disentangle the two, a quantitative description of the measurements in small systems~\cite{Schenke:2019pmk,Schenke:2020mbo} needs to account for details of the initial state.
-Besides the hybrid models mentioned above, alternative approaches were developed to describe collectivity in small systems. A microscopic model for collectivity was implemented in the PYTHIA~8 event generator, which is based on interacting strings (string shoving) and is called the “string shoving model”~\cite{Bierlich:2017vhg}. In this model, strings repel each other in the transverse direction, which results in microscopic transverse pressure and, consequently, in long-range correlations. PYTHIA~8 with string shoving can qualitatively reproduce the near-side ($\Delta\varphi\sim0$) ridge yield measured by the CMS Collaboration~\cite{Khachatryan:2016txc}.
-Systematic studies of these correlation effects from small to large systems are being performed on the theoretical side~(see e.g. \cite{Schenke:2020mbo}).
+
+Alternative descriptions for the small systems collectivity include the PYTHIA~8 event generator, in which interacting strings repel one another transversely in an approach dubbed ``string shoving''~\cite{Bierlich:2017vhg}. The repulsion of the strings causes a microscopic transverse pressure, giving a rise to the long-range correlations. The string shoving approach in PYTHIA~8 successively reproduces the near-side ($\Delta\varphi\sim0$) ridge yield in measurements by ALICE~\cite{ALICE:2021nir} and CMS~\cite{Khachatryan:2016txc} Collaboration. Systematic mapping of the correlations effects across collision systems of varying size is presently underway on the theoretical side~(see e.g. \cite{Schenke:2020mbo}).
+%Besides the hybrid models mentioned above, alternative approaches were developed to describe collectivity in small systems. A microscopic model for collectivity was implemented in the PYTHIA~8 event generator, which is based on interacting strings (string shoving) and is called the “string shoving model”~\cite{Bierlich:2017vhg}. In this model, strings repel each other in the transverse direction, which results in microscopic transverse pressure and, consequently, in long-range correlations.
+%PYTHIA~8 with string shoving can qualitatively reproduce the near-side ($\Delta\varphi\sim0$) ridge yield measured by the CMS Collaboration~\cite{Khachatryan:2016txc}.
+%Systematic studies of these correlation effects from small to large systems are being performed on the theoretical side~(see e.g. \cite{Schenke:2020mbo}).
 The quantitative description of the full set of experimental data has not been achieved yet. A summary of various explanations for the observed correlations in small systems is given in~\cite{Strickland:2018exs,Loizides:2016tew,Nagle:2018nvi}. 
 
-On the experimental side, flow extraction methods in these small systems have not been fully understood due to the strong jet fragmentation bias. In order to remove the remaining non-flow contributions in i.e. cumulant methods~\cite{Bilandzic:2010jr, Acharya:2019vdf}, we perform a flow-extraction method using a low-multiplicity template. Flow coefficients in various high-multiplicity classes are extracted from the low-multiplicity template fit method~\cite{ATLAS:2015hzw,ATLAS:2016yzd}. This template fit method allows one to subtract the enhanced away-side jet yields in high-multiplicity with respect to low-multiplicity events, possibly testing a lower limit of event multiplicity on the flow signal.
+Another crucial evidence of a strongly interacting systems in small collision systems would be to confirm the presence of jet quenching~\cite{Gyulassy:1990ye,Wang:1991xy}, however, no evidence is observed so far in neither high-multiplicicty pp or p--Pb collisions~\cite{Khachatryan:2016odn,Adam:2016jfp,Adam:2016dau,Acharya:2017okq}. Two-particle angular correlations in short -range correlations around $(\Delta\eta$, $\Delta\varphi)=(0,0)$~\cite{Adam:2016tsv} is a good tool to study jet fragmentations with.
 
-It is expected that final-state interactions affect also produced jets if they are the source of collectivity in small systems. Another crucial evidence of a strongly interacting systems in high-multiplicity pp collisions would be to confirm the presence of jet quenching~\cite{Gyulassy:1990ye,Wang:1991xy}, however, no evidence is observed so far in neither high-multiplicicty pp or p--Pb collisions~\cite{Khachatryan:2016odn,Adam:2016jfp,Adam:2016dau,Acharya:2017okq}. Two-particle angular correlations in short -range correlations around $(\Delta\eta$, $\Delta\varphi)=(0,0)$~\cite{Adam:2016tsv} is a good tool to study jet fragmentations with. 
+On the experimental side, flow extraction methods in these small systems have not been fully understood due to the strong jet fragmentation bias. 
+For two-particle correlations, the non-flow contribution is usually suppressed by requiring a large $\Delta\eta$ gap between the two particles and it is also widely used in cumulant methods~\cite{Bilandzic:2010jr, Acharya:2019vdf}. However, this $\Delta\eta$ gap method both for two-particle correlations and cumulants removes the non-flow contribution only on the near-side and not on the away-side ($\Delta\varphi\sim\pi$). Later it was proposed to use low-multiplicity template fit to remove also away-side contributions~\cite{ATLAS:2015hzw,ATLAS:2016yzd,ATLAS:2018ngv}, taking into account the auto-correlation between event multiplicity and jet yields~\cite{CMS:2013ycn}. This template fit method allows one to subtract the enhanced away-side jet yields in high-multiplicity with respect to low-multiplicity events, possibly testing a lower limit of event multiplicity on the flow signal.
 
-As an extension of Ref.~\cite{ALICE:2021nir}, this report studies the interplay of jet production and collective effects in small systems, long- and short-range correlations simultaneously in high-multiplicity pp collisions at $\sqrt{s} =13$ TeV and $\sqrt{s_{\mathrm{NN}}}=5.02$ TeV p-Pb collisions. 
-The flow coefficients and near-side jet-like correlations with the event-scale selection are reported. The event-scale selection is done by requiring a minimum transverse momentum of the leading particle or the reconstructed jet at mid-rapidity, which is expected to bias the impact parameter of pp collisions to be smaller on average~\cite{Sjostrand:1986ep,Frankfurt:2010ea}. At the same time, the transverse momentum of the leading particle or the reconstructed jet is a measure of the momentum transfer in the hard parton scattering~\cite{Chatrchyan:2012tt,Chatrchyan:2011id}.
-The experimental setup and analysis method are described in Sec.~\ref{sec:experiment} and \ref{sec:ana}, respectively. The sources of systematic uncertainties are discussed in Sec.~\ref{sec:uncertainties}. The results and comparisons with model calculations of the measurements are presented in Sec.~\ref{sec:results}. Finally, results are summarized in~Sec.~\ref{sec:summary}.
+As an extension of the ridge studies in Ref.~\cite{ALICE:2021nir}, this report studies the interplay of jet production and collective effects in small systems, long- and short-range correlations simultaneously in high-multiplicity pp collisions at $\sqrt{s} =13$ TeV and $\sqrt{s_{\mathrm{NN}}}=5.02$ TeV p-Pb collisions. The flow coefficients and near-side jet-like correlations with the event-scale selection are reported. The event-scale selection is done by requiring a minimum transverse momentum of the leading particle or the reconstructed jet at mid-rapidity, which is expected to bias the impact parameter of pp collisions to be smaller on average~\cite{Sjostrand:1986ep,Frankfurt:2010ea}. At the same time, the transverse momentum of the leading particle or the reconstructed jet is a measure of the momentum transfer in the hard parton scattering~\cite{Chatrchyan:2012tt,Chatrchyan:2011id}.
+
+This paper is organized as follows. The experimental setup and analysis method are described in Sec.~\ref{sec:experiment} and \ref{sec:ana}, respectively. The sources of systematic uncertainties are discussed in Sec.~\ref{sec:uncertainties}. The results and comparisons with model calculations of the measurements are presented in Sec.~\ref{sec:results}. Finally, results are summarized in~Sec.~\ref{sec:summary}.
 
  
