clean up references

--- a/sec_intro.tex
+++ b/sec_intro.tex
@@ -13,18 +13,18 @@ Hybrid models implementing both effects are generally used in hydrodynamic simul
 The proton shape and its fluctuations are also important to model small systems~\cite{Mantysaari:2017cni}.
 To understand the influence of initial- or final-state effects, and to possibly disentangle the two, a quantitative description of the measurements in small systems~\cite{Schenke:2019pmk,Schenke:2020mbo} needs to account for details of the initial state.
 
-Alternative descriptions for the small systems collectivity include the PYTHIA~8 event generator, in which interacting strings repel one another transversely in an approach dubbed ``string shoving''~\cite{Bierlich:2017vhg}. The repulsion of the strings causes a microscopic transverse pressure, giving a rise to the long-range correlations. The string shoving approach in PYTHIA~8 successively reproduces the near-side ($\Delta\varphi\sim0$) ridge yield in measurements by ALICE~\cite{ALICE:2021nir} and CMS~\cite{Khachatryan:2016txc} Collaboration. Systematic mapping of the correlations effects across collision systems of varying size is presently underway on the theoretical side~(see e.g. \cite{Schenke:2020mbo}).
+Alternative descriptions for the small systems collectivity include the PYTHIA~8 event generator, in which interacting strings repel one another transversely in an approach dubbed ``string shoving''~\cite{Bierlich:2017vhg,Bierlich:2019ixq}. The repulsion of the strings causes a microscopic transverse pressure, giving a rise to the long-range correlations. The string shoving approach in PYTHIA~8 successively reproduces the near-side ($\Delta\varphi\sim0$) ridge yield in measurements by ALICE~\cite{ALICE:2021nir} and CMS~\cite{Khachatryan:2016txc} Collaboration. Systematic mapping of the correlations effects across collision systems of varying size is presently underway on the theoretical side~(see e.g. \cite{Schenke:2020mbo}).
 %Besides the hybrid models mentioned above, alternative approaches were developed to describe collectivity in small systems. A microscopic model for collectivity was implemented in the PYTHIA~8 event generator, which is based on interacting strings (string shoving) and is called the “string shoving model”~\cite{Bierlich:2017vhg}. In this model, strings repel each other in the transverse direction, which results in microscopic transverse pressure and, consequently, in long-range correlations.
 %PYTHIA~8 with string shoving can qualitatively reproduce the near-side ($\Delta\varphi\sim0$) ridge yield measured by the CMS Collaboration~\cite{Khachatryan:2016txc}.
 %Systematic studies of these correlation effects from small to large systems are being performed on the theoretical side~(see e.g. \cite{Schenke:2020mbo}).
 The quantitative description of the full set of experimental data has not been achieved yet. A summary of various explanations for the observed correlations in small systems is given in~\cite{Strickland:2018exs,Loizides:2016tew,Nagle:2018nvi}. 
 
-Another crucial evidence of a strongly interacting systems in small collision systems would be to confirm the presence of jet quenching~\cite{Gyulassy:1990ye,Wang:1991xy}, however, no evidence is observed so far in neither high-multiplicicty pp or p--Pb collisions~\cite{Khachatryan:2016odn,Adam:2016jfp,Adam:2016dau,Acharya:2017okq}. Two-particle angular correlations in short -range correlations around $(\Delta\eta$, $\Delta\varphi)=(0,0)$~\cite{Adam:2016tsv} is a good tool to study jet fragmentations with.
+Another crucial evidence of a strongly interacting systems in small collision systems would be to confirm the presence of jet quenching~\cite{Gyulassy:1990ye,Wang:1991xy}, however, no evidence is observed so far in neither high-multiplicicty pp or p--Pb collisions~\cite{Adam:2014qja,Khachatryan:2016odn,Adam:2016jfp,Adam:2016dau,Acharya:2017okq}. Two-particle angular correlations in short -range correlations around $(\Delta\eta$, $\Delta\varphi)=(0,0)$~\cite{Adam:2016tsv} is a good tool to study jet fragmentations with.
 
 On the experimental side, flow extraction methods in these small systems have not been fully understood due to the strong jet fragmentation bias. 
 For two-particle correlations, the non-flow contribution is usually suppressed by requiring a large $\Delta\eta$ gap between the two particles and it is also widely used in cumulant methods~\cite{Bilandzic:2010jr, Acharya:2019vdf}. However, this $\Delta\eta$ gap method both for two-particle correlations and cumulants removes the non-flow contribution only on the near-side and not on the away-side ($\Delta\varphi\sim\pi$). Later it was proposed to use low-multiplicity template fit to remove also away-side contributions~\cite{ATLAS:2015hzw,ATLAS:2016yzd,ATLAS:2018ngv}, taking into account the auto-correlation between event multiplicity and jet yields~\cite{CMS:2013ycn}. This template fit method allows one to subtract the enhanced away-side jet yields in high-multiplicity with respect to low-multiplicity events, possibly testing a lower limit of event multiplicity on the flow signal.
 
-As an extension of the ridge studies in Ref.~\cite{ALICE:2021nir}, this report studies the interplay of jet production and collective effects in small systems, long- and short-range correlations simultaneously in high-multiplicity pp collisions at $\sqrt{s} =13$ TeV and $\sqrt{s_{\mathrm{NN}}}=5.02$ TeV p-Pb collisions. The flow coefficients and near-side jet-like correlations with the event-scale selection are reported. The event-scale selection is done by requiring a minimum transverse momentum of the leading particle or the reconstructed jet at mid-rapidity, which is expected to bias the impact parameter of pp collisions to be smaller on average~\cite{Sjostrand:1986ep,Frankfurt:2010ea}. At the same time, the transverse momentum of the leading particle or the reconstructed jet is a measure of the momentum transfer in the hard parton scattering~\cite{Chatrchyan:2012tt,Chatrchyan:2011id}.
+As an extension of the ridge studies in Ref.~\cite{ALICE:2021nir}, this report studies the interplay of jet production and collective effects in small systems, long- and short-range correlations simultaneously in high-multiplicity pp collisions at $\sqrt{s} =13$ TeV and $\sqrt{s_{\mathrm{NN}}}=5.02$ TeV p-Pb collisions. The flow coefficients and near-side jet-like correlations with the event-scale selection are reported. The event-scale selection is done by requiring a minimum transverse momentum of the leading particle or the reconstructed jet at mid-rapidity, which is expected to bias the impact parameter of pp collisions to be smaller on average~\cite{Sjostrand:1986ep,Frankfurt:2003td,Frankfurt:2010ea}. At the same time, the transverse momentum of the leading particle or the reconstructed jet is a measure of the momentum transfer in the hard parton scattering~\cite{Chatrchyan:2012tt,Chatrchyan:2011id}.
 
 This paper is organized as follows. The experimental setup and analysis method are described in Sec.~\ref{sec:experiment} and \ref{sec:ana}, respectively. The sources of systematic uncertainties are discussed in Sec.~\ref{sec:uncertainties}. The results and comparisons with model calculations of the measurements are presented in Sec.~\ref{sec:results}. Finally, results are summarized in~Sec.~\ref{sec:summary}.
 
