--- a/paper.bib
+++ b/paper.bib
@@ -199,7 +199,57 @@
       primaryClass   = "nucl-th",
       SLACcitation   = "%%CITATION = ARXIV:1605.03954;%%"
 }
+@article{JETSCAPE:2020mzn,
+    author = "Everett, D. and others",
+    collaboration = "JETSCAPE",
+    title = "{Multisystem Bayesian constraints on the transport coefficients of QCD matter}",
+    eprint = "2011.01430",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    doi = "10.1103/PhysRevC.103.054904",
+    journal = "Phys. Rev. C",
+    volume = "103",
+    number = "5",
+    pages = "054904",
+    year = "2021"
+}
 
+@article{Nijs:2020roc,
+    author = {Nijs, Govert and van der Schee, Wilke and G\"ursoy, Umut and Snellings, Raimond},
+    title = "{Bayesian analysis of heavy ion collisions with the heavy ion computational framework Trajectum}",
+    eprint = "2010.15134",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-th",
+    reportNumber = "CERN-TH-2020-175, MIT-CTP/5251",
+    doi = "10.1103/PhysRevC.103.054909",
+    journal = "Phys. Rev. C",
+    volume = "103",
+    number = "5",
+    pages = "054909",
+    year = "2021"
+}
+@article{Parkkila:2021tqq,
+    author = "Parkkila, J. E. and Onnerstad, A. and Kim, D. J.",
+    title = "{Bayesian estimation of the specific shear and bulk viscosity of the quark-gluon plasma with additional flow harmonic observables}",
+    eprint = "2106.05019",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    doi = "10.1103/PhysRevC.104.054904",
+    journal = "Phys. Rev. C",
+    volume = "104",
+    number = "5",
+    pages = "054904",
+    year = "2021"
+}
+@article{Parkkila:2021yha,
+    author = "Parkkila, J. E. and Onnerstad, A. and Taghavi, S. F. and Mordasini, C. and Bilandzic, A. and Kim, D. J.",
+    title = "{New constraints for QCD matter from improved Bayesian parameter estimation in heavy-ion collisions at LHC}",
+    eprint = "2111.08145",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    month = "11",
+    year = "2021"
+}
 %SC 1
 @article{ALICE:2016kpq,
       author         = "Adam, Jaroslav and others",
@@ -236,6 +286,7 @@
       reportNumber   = "CERN-EP-2017-215",
       SLACcitation   = "%%CITATION = ARXIV:1709.01127;%%"
 }
+
 @article{Acharya:2017zfg,
     author = "Acharya, Shreyasi and others",
     archivePrefix = "arXiv",
@@ -264,7 +315,35 @@
     pages = "085",
     year = "2020"
 }
-
+@article{ALICE:2021klf,
+    author = "Acharya, Shreyasi and others",
+    collaboration = "ALICE",
+    title = "{Multiharmonic Correlations of Different Flow Amplitudes in Pb-Pb Collisions at $\sqrt{s_{_{NN}}}=2.76$\,\,TeV}",
+    eprint = "2101.02579",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-ex",
+    reportNumber = "CERN-EP-2021-005",
+    doi = "10.1103/PhysRevLett.127.092302",
+    journal = "Phys. Rev. Lett.",
+    volume = "127",
+    number = "9",
+    pages = "092302",
+    year = "2021"
+}
+@article{ALICE:2021adw,
+    author = "Acharya, Shreyasi and others",
+    collaboration = "ALICE",
+    title = "{Measurements of mixed harmonic cumulants in Pb\textendash{}Pb collisions at $\sqrt {s_{NN}}$ = 5.02 TeV}",
+    eprint = "2102.12180",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-ex",
+    reportNumber = "CERN-EP-2021-031",
+    doi = "10.1016/j.physletb.2021.136354",
+    journal = "Phys. Lett. B",
+    volume = "818",
+    pages = "136354",
+    year = "2021"
+}
 
 @article{Bernhard:2019bmu,
     author = "Bernhard, Jonah E. and Moreland, J. Scott and Bass, Steffen A.",
@@ -933,16 +1012,6 @@ SLACcitation   = "%%CITATION = ARXIV:1001.1950;%%"
     year = "2012"
 }
 
-@article{Contin_2012:ITSPTRES,
-    author = "Contin, G.",
-    title = "{Performance of the present ALICE Inner Tracking System and studies for the upgrade}",
-    doi = "10.1088/1748-0221/7/06/C06007",
-    journal = "JINST",
-    volume = "7",
-    pages = "C06007",
-    year = "2012"
-}
-
 @article{Acharya:2018eat,
     author = "Acharya, Shreyasi and others",
     collaboration = "ALICE",
@@ -1180,28 +1249,7 @@ author = "G.I. Kopylov"
     pages = "044913",
     year = "2011"
 }
-@article{Parkkila:2021tqq,
-    author = "Parkkila, J. E. and Onnerstad, A. and Kim, D. J.",
-    title = "{Bayesian estimation of the specific shear and bulk viscosity of the quark-gluon plasma with additional flow harmonic observables}",
-    eprint = "2106.05019",
-    archivePrefix = "arXiv",
-    primaryClass = "hep-ph",
-    doi = "10.1103/PhysRevC.104.054904",
-    journal = "Phys. Rev. C",
-    volume = "104",
-    number = "5",
-    pages = "054904",
-    year = "2021"
-}
-@article{Parkkila:2021yha,
-    author = "Parkkila, J. E. and Onnerstad, A. and Taghavi, S. F. and Mordasini, C. and Bilandzic, A. and Kim, D. J.",
-    title = "{New constraints for QCD matter from improved Bayesian parameter estimation in heavy-ion collisions at LHC}",
-    eprint = "2111.08145",
-    archivePrefix = "arXiv",
-    primaryClass = "hep-ph",
-    month = "11",
-    year = "2021"
-}
+
 @article{Moreland:2014oya,
 	author = "Moreland, J. Scott and Bernhard, Jonah E. and Bass, Steffen A.",
 	title = "{Alternative ansatz to wounded nucleon and binary collision scaling in high-energy nuclear collisions}",
@@ -1317,7 +1365,6 @@ author = "G.I. Kopylov"
     pages = "042301",
     year = "2011"
 }
-Copy to ClipboardDownload
 
 @article{Rose:2020lfc,
     author = "Rose, J. -B. and Torres-Rincon, J. M. and Elfner, H.",
@@ -1336,7 +1383,7 @@ Copy to ClipboardDownload
 @article{ALICE:Nchpt,
     author = "Acharya, Shreyasi and others",
     collaboration = "ALICE",
-    title = "{Minimum-bias and $p_\mathrm{T}$-cut pseudorapidity density in pp collisions at \sqrt{s}$ = 5.02 and 13 TeV}",
+    title = "{Minimum-bias and $p_\mathrm{T}$-cut pseudorapidity density in pp collisions at $\sqrt{s}$ = 5.02 and 13 TeV}",
     url = {https://alice-publications.web.cern.ch/node/6814},
     year = "2021"
 }
@@ -1386,4 +1433,19 @@ Copy to ClipboardDownload
     number = "4",
     pages = "044906",
     year = "2014"
+}
+
+@article{ALICE:2018vuu,
+    author = "Acharya, S. and others",
+    collaboration = "ALICE",
+    title = "{Transverse momentum spectra and nuclear modification factors of charged particles in pp, p-Pb and Pb-Pb collisions at the LHC}",
+    eprint = "1802.09145",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-ex",
+    reportNumber = "CERN-EP-2018-025",
+    doi = "10.1007/JHEP11(2018)013",
+    journal = "JHEP",
+    volume = "11",
+    pages = "013",
+    year = "2018"
 }
