--- a/sec_ana.tex
+++ b/sec_ana.tex
@@ -9,7 +9,7 @@ The V0 detector consists of two stations placed on both sides of the interaction
 
 The primary vertex positions are reconstructed from signals measured by the Silicon Pixel Detector (SPD) that consists of the innermost two layers of the ITS. The reconstructed primary vertices of selected events should be located within 8-cm of the nominal interaction point along the beam direction. The probability of pileup event is estimated to be about 0.6\% for minimum-bias events. Pileup events are determined and rejected if the longitudinal displacement of the secondary vertex is greater than 0.8 cm. 
 
-Charged-particle tracks are reconstructed using the combined information of the ITS and TPC in a uniform magnetic field of 0.5 T along the beam direction by the solenoid. The ITS is a silicon tracker with six layers of silicon sensors, the SPD~\cite{Santoro2009:ALICESPD} consists of the two innermost layers, the next two layers are the SDD (Silicon Drift Detector) and the outermost layers are the SSD (Silicon Strip Detector). The ITS and TPC covering the entire azimuth range up to $|\eta|<1.4$ and 0.9, respectively, for the detection of charged particles emitted within 8 cm from the nominal vertex position $z_\mathrm{vtx}=0$ along the beam direction. Charged particle tracking is performed with the ITS and TPC capable of reconstructing tracks down to 0.15 GeV/$c$, with an efficiency of about 65\%. The efficiency reaches 80\% for intermediate $\pt$, 1--5~GeV/$c$. The resolution of $\pt$ is about 1\% for primary charged tracks with $\pt<$~1~GeV/$c$, linearly increasing to 6\% at $\pt\sim$ 40~ GeV/$c$~\cite{Contin_2012:ITSPTRES}. 
+Charged-particle tracks are reconstructed using the combined information of the ITS and TPC in a uniform magnetic field of 0.5 T along the beam direction by the solenoid. The ITS is a silicon tracker with six layers of silicon sensors, the SPD~\cite{Santoro2009:ALICESPD} consists of the two innermost layers, the next two layers are the SDD (Silicon Drift Detector) and the outermost layers are the SSD (Silicon Strip Detector). The ITS and TPC covering the entire azimuth range up to $|\eta|<1.4$ and 0.9, respectively, for the detection of charged particles emitted within 8 cm from the nominal vertex position $z_\mathrm{vtx}=0$ along the beam direction. Charged particle tracking is performed with the ITS and TPC capable of reconstructing tracks down to 0.15 GeV/$c$, with an efficiency of about 65\%. The efficiency reaches 80\% for intermediate $\pt$, 1--5~GeV/$c$. The resolution of $\pt$ is about 1\% for primary charged tracks with $\pt<$~1~GeV/$c$, linearly increasing to 6\% at $\pt\sim$ 40~ GeV/$c$. 
 
 The charged particle selection criteria are optimized to ensure a uniform efficiency over the entire TPC volume to mitigate the effects of small areas where some ITS layers are inactive. The selection consists of two classes of tracks. Those in first class must have at least one hit in SPD. The tracks of the second class do not have any hits related to the SPD and their initial points are rather constrained to the primary vertex~\cite{Adam:2015ewa}. 
 
@@ -21,7 +21,9 @@ Two-particle angular correlations are measured as a function of the relative azi
 \frac{1}{N_{\rm{trig}}} \frac{ \rm{d}\it{}^{2} N_{\rm{pair}} }{ \rm{d} \Delta\eta \rm{d}\Delta\varphi} = B(0, 0)\frac{S(\Delta\eta, \Delta\varphi)}{B(\Delta\eta, \Delta\varphi)}  \Big\lvert_{\pttrig,\,\ptassoc}\quad , 
 \label{eq:corrfunction}
 \end{eqnarray}
-where the trigger and associated particles are defined for different transverse momentum ranges, $1<p_\mathrm{T,trig}<2$ GeV/c and $1<p_\mathrm{T,assoc}<4$ GeV/c. $N_{trig}$ and $N_{pair}$ are the number of trigger particles and trigger-associated particle pairs respectively. $S(\Delta\eta, \Delta\varphi)$ corresponds to the average number of pairs in the same event and $B(\Delta\eta, \Delta\varphi)$ to the number of pairs in mixed events. $B (0,0)$ represents the normalization of $B(\Delta\eta, \Delta\varphi)$, and by dividing $S(\Delta\eta, \Delta\varphi)$ with $B(\Delta\eta, \Delta\varphi)/B (0,0)$ the acceptance effects are corrected for. The track reconstruction efficiency is corrected for on the right-hand side of Eq.~\ref{eq:corrfunction} as a function of $p_\mathrm{T}$ and $\eta$. The correlation functions are averaged over the vertex bins which results in the final per-trigger yield. This analysis is done for various multiplicity percentiles ($0-0.1\%$, $1-5\%$, $5-20\%$, $20-60\%$, and $60-100\%$), and for each multiplicity percentile, the pairs in mixed events are required to have primary vertices within the same 2 cm wide $z_{vtx}$ interval~\cite{KOPYLOV1974472:evtmixing,Adam:2016tsv}. 
+where the trigger and associated particles are defined for different transverse momentum ranges, $1<p_\mathrm{T,trig}<2$ GeV/c and $1<p_\mathrm{T,assoc}<4$ GeV/c. $N_{trig}$ and $N_{pair}$ are the number of trigger particles and trigger-associated particle pairs respectively. $S(\Delta\eta, \Delta\varphi)$ corresponds to the average number of pairs in the same event and $B(\Delta\eta, \Delta\varphi)$ to the number of pairs in mixed events. $B (0,0)$ represents the normalization of $B(\Delta\eta, \Delta\varphi)$, and by dividing $S(\Delta\eta, \Delta\varphi)$ with $B(\Delta\eta, \Delta\varphi)/B (0,0)$ the acceptance effects are corrected for. The track reconstruction efficiency is corrected for on the right-hand side of Eq.~\ref{eq:corrfunction} as a function of $p_\mathrm{T}$ and $\eta$. The correlation functions are averaged over the vertex bins which results in the final per-trigger yield.
+In the previous study~\cite{ALICE:2021nir}, The tracking efficiency was calculated with a detector simulation with the PYTHIA 8 event generator and the GEANT3 transport code~\cite{Brun:1994aa}.With the help of the recent measurements~\cite{}, the tracking efficiency are determined by reweighting the primary particle composition based on data driven method~\cite{ALICE:2018vuu}. This method improves the measurements on the jet-yield extraction and has no impact on the flow extraction.
+This analysis is done for various multiplicity percentiles ($0-0.1\%$, $1-5\%$, $5-20\%$, $20-60\%$, and $60-100\%$), and for each multiplicity percentile, the pairs in mixed events are required to have primary vertices within the same 2 cm wide $z_{vtx}$ interval~\cite{KOPYLOV1974472:evtmixing,Adam:2016tsv}. 
 The per-trigger yield are extracted for various multiplicity percentiles and $\pt$ intervals at large $\Delta\eta$, which is at $1.6<|\Delta\eta|<1.8$ to remove the near-side non-flow contributions. The reported minimum of $\pt$  is at $\pt$~1~GeV/$c$ since at lower $\pt$, the jet-like contribution extends into the large $\Delta\eta$ range that is measured. In this region, the per-trigger yield as a function of $\Delta\varphi$, is expressed as
 \begin{eqnarray}
 Y(\Delta\varphi) = \frac{1}{N_{\rm{trig}}} \frac{ \rm{d}\it{}N_{\rm{pair}} }{ \rm{d}\Delta\varphi } = \int_{1.6<|\Delta \eta|<1.8} \left( \frac{1}{\it{N}_{\rm{trig}}} \frac{ \rm{d}\it{}^{2} N_{\rm{pair}} }{ \rm{d}\Delta\eta d\Delta\varphi} \right) \dfrac{1}{\delta_{\Delta\eta}} \rm{d}\Delta \eta \quad ,
