Updates from Overleaf

--- a/paper.bib
+++ b/paper.bib
@@ -1449,3 +1449,33 @@ author = "G.I. Kopylov"
     pages = "013",
     year = "2018"
 }
+
+@article{hybridExplanation,
+  author         = "Abelev, Betty and others",
+  title          = "{Long-range angular correlations on the near and away
+    side in p--Pb collisions at $\sqrt{s_\mathrm{NN}}=5.02$ TeV}",
+collaboration  = "ALICE",
+journal        = "Phys. Lett.",
+volume         = "B719",
+year           = "2013",
+pages          = "29-41",
+doi            = "10.1016/j.physletb.2013.01.012",
+eprint         = "1212.2001",
+archivePrefix  = "arXiv",
+primaryClass   = "nucl-ex",
+reportNumber   = "CERN-PH-EP-2012-359",
+SLACcitation   = "%%CITATION = ARXIV:1212.2001;%%"
+}
+@article{Moreland:2018gsh,
+    author = "Moreland, J. Scott and Bernhard, Jonah E. and Bass, Steffen A.",
+    title = "{Bayesian calibration of a hybrid nuclear collision model using p-Pb and Pb-Pb data at energies available at the CERN Large Hadron Collider}",
+    eprint = "1808.02106",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-th",
+    doi = "10.1103/PhysRevC.101.024911",
+    journal = "Phys. Rev. C",
+    volume = "101",
+    number = "2",
+    pages = "024911",
+    year = "2020"
+}
