--- a/sec_intro.tex
+++ b/sec_intro.tex
@@ -5,7 +5,7 @@
 
 High-energy nucleus--nucleus collisions exhibit strong collectivity, observed through significant correlations between particles emitted over a wide pseudorapidity range at RHIC~\cite{Adams:2005dq,Adcox:2004mh,Arsene:2004fa,Back:2004je} and LHC~\cite{Abelev:2012di, Abelev:2014pua, ATLAS:2011ah}. The collective effects originate from the pressure-driven expansion of the strongly interacting quark-gluon plasma (QGP) that is formed at the extreme temperatures created in a collision event. This expansion is described by relativistic hydrodynamics~\cite{Romatschke:2007mq,Jeon:2015dfa,Romatschke:2017ejr}, for which the measured correlations act as constraints for the transport properties of the QGP. The understanding of the transport properties has recently been significantly advanced through efforts in experimental~\cite{ALICE:2016kpq,Acharya:2017gsw,Acharya:2017zfg,Acharya:2020taj,ALICE:2021klf,ALICE:2021adw} and theoretical studies~\cite{Niemi:2015qia,Bernhard:2016tnd,Bernhard:2019bmu,Parkkila:2021tqq,Parkkila:2021yha}.
 
-Correspondingly, long-range correlations are also observed in smaller collision systems, particularly high-multiplicity proton--proton (pp)~\cite{Aad:2015gqa,Khachatryan:2015lva,Khachatryan:2016txc,Acharya:2019vdf}, proton--nucleus (pA)~\cite{Abelev:2012ola,Aad:2014lta,Aaboud:2016yar,Khachatryan:2016ibd}, and light nucleus--nucleus collisions~\cite{PHENIX:2018lia,Aidala:2017ajz}. The long pseudorapidity range of these correlations suggests that they originate from a very early stage of a collision, which in turn implies a hydrodynamic expansion of a medium created in these small systems. The small collision geometry in these systems entails a very short-lived medium of smaller volume, and it is not established in what extend the potential hydrodynamic behaviour contributes with respect to the flow-like signals produced by other mechanisms~\cite{Busza:2018rrf,Nagle:2018nvi}.
+Correspondingly, long-range correlations are also observed in smaller collision systems, particularly high-multiplicity proton--proton (pp)~\cite{Aad:2015gqa,Khachatryan:2015lva,Khachatryan:2016txc,Acharya:2019vdf}, proton--nucleus (pA)~\cite{ALICE:2012eyl,Aad:2014lta,Aaboud:2016yar,Khachatryan:2016ibd}, and light nucleus--nucleus collisions~\cite{PHENIX:2018lia,Aidala:2017ajz}. The long pseudorapidity range of these correlations suggests that they originate from a very early stage of a collision, which in turn implies a hydrodynamic expansion of a medium created in these small systems. The small collision geometry in these systems entails a very short-lived medium of smaller volume, and it is not established in what extend the potential hydrodynamic behaviour contributes with respect to the flow-like signals produced by other mechanisms~\cite{Busza:2018rrf,Nagle:2018nvi}.
 
 On the theoretical side, these flow signals in high-multiplicity pp and p--Pb events have been attributed to initial-state or final-state effects. Initial-state effects, usually attributed to gluon saturation~\cite{Dusling:2012cg,Bzdak:2013zma}, can form long-range
 correlations along the longitudinal direction. The final-state effects might be parton-induced interactions~\cite{Arbuzov:2011yr} or collective phenomena due to hydrodynamic behavior of the produced matter arising in a high-density system possibly formed in these collisions~\cite{Weller:2017tsr,Zhao:2017rgg}. 
