--- a/sec_results.tex
+++ b/sec_results.tex
@@ -67,9 +67,9 @@ While  EPOS LHC (PYTHIA8 String Shoving) model shows a strong (weak)  event-scal
 
 The results from p--Pb collisions are compared to the hydrodynamical calculations using the parametrization from an improved global Bayesian analysis using new sophisticated collective flow observables from two beam energies in Pb--Pb collisions~\cite{Parkkila:2021yha}. This hydrodynamic model, {T\raisebox{-.5ex}{R}ENTo}+iEBE-VISHNU, consists of the {T\raisebox{-.5ex}{R}ENTo} model~\cite{Moreland:2014oya} for the initial condition, which is connected with a free streaming to a 2+1 dimensional causal hydrodynamic model VISH2+1~\cite{Shen:2014vra}. The evolution is continued after particlization with a hadronic cascade (UrQMD) model~\cite{Bass:1998ca,Bleicher:1999xi}. The initial conditions, $\eta/s(T)$, $\zeta/s(T)$ and other free parameters of the hybrid model are extracted in a global Bayesian analysis.
 %incorporating constraints measured from a Pb--Pb collision system at $\sqrt{s_\mathrm{NN}}=5.02\,\mathrm{TeV}$.
-A model calculation with the best-fit parameterization for the transport coefficients chosen by maximum a posteriori (MAP) for Pb--Pb collisions at $\sqrt{s_{\text{NN}}}=5.02$~TeV as they are reported in Ref.~\cite{Parkkila:2021yha} is performed. The parameterization for the initial conditions, which include a the sub-nucleon structure with six constituent partons per nucleon, is taken from a model calibration with additional p--Pb data~[X]. All the kinematic cuts such as transverse momentum and pseudorapidity intervals are matched with the data reported in this article. The flow coefficients in the hydrodynamic calculation are extracted with the two-particle cumulant method, as the results are not affected by the away-side non-flow.
+A model calculation with the best-fit parameterization for the transport coefficients chosen by maximum a posteriori (MAP) for Pb--Pb collisions at $\sqrt{s_{\text{NN}}}=5.02$~TeV as they are reported in Ref.~\cite{Parkkila:2021yha} is performed. The parameterization for the initial conditions, which include a sub-nucleon structure with six constituent partons per nucleon, is taken from a model calibration with additional p--Pb data~\cite{Moreland:2018gsh}. All the kinematic cuts such as transverse momentum and pseudorapidity intervals are matched with the data reported in this article. The flow coefficients in the hydrodynamic calculation are extracted with the two-particle cumulant method, as the results are not affected by the away-side non-flow.
 
-Figure~\ref{fig:vnmult_model} presents the model comparisons of the $v_2$ and $v_3$. It is found that {T\raisebox{-.5ex}{R}ENTo}+iEBE-VISHNU underestimates the data by large margin. Whereas the data shows a subtle centrality dependence with increasing values at larger multiplicities, {T\raisebox{-.5ex}{R}ENTo}+iEBE-VISHNU predicts low values at higher multiplicities and higher values and low multiplicities, similarly as is found in large collision systems~\cite{Acharya:2020taj}. The large discrepancies in the prediction can possibly be alleviated by inclusion of the newly measured p--Pb constraints in a future Bayesian parameter estimation, as well as by the improvement of the initial condition model for the small collision systems.
+Figure~\ref{fig:vnmult_model} presents the model comparisons of the $v_2$ and $v_3$. It is found that {T\raisebox{-.5ex}{R}ENTo}+iEBE-VISHNU underestimates the data by large margin. Whereas the data shows a subtle centrality dependence with increasing values at larger multiplicities, {T\raisebox{-.5ex}{R}ENTo}+iEBE-VISHNU predicts low values at higher multiplicities and higher values at low multiplicities, similarly as is found in large collision systems~\cite{Acharya:2020taj}. The large discrepancies in the prediction can possibly be alleviated by inclusion of the newly measured p--Pb constraints in a future Bayesian parameter estimation, as well as by the improvement of the initial condition model for the small collision systems.
 
 The results are also compared to IP-Glasma+MUSIC+UrQMD hydrodynamic calculations~\cite{Schenke:2020mbo}. This model uses IP-Glasma initial conditions~\cite{Schenke:2012wb} including sub-nucleonic fluctuations with three hot-spots per nucleon. The hydrodynamic evolution is performed by MUSIC~\cite{Schenke:2010rr} and coupled with the UrQMD~\cite{Bass:1998ca,Bleicher:1999xi} hadronic interactions. 
 % mean-pT All paramters are fixed to reproduce 200 GeV Au+Au collisions at RHIC and 
@@ -77,6 +77,10 @@ The model calculations are performed with a constant $\eta/s=0.12$ and a tempera
 This model describes well the multiplicity dependence of $v_2$ in p--Pb collisions and the magnitude at the highest multiplicity but underestimates the data for lower multiplicity classes. As for pp collisions, the calculations clearly miss both the observed magnitude except for $N_{ch}>25$ as well as the trend of the multiplicity dependence. The model shows that $v_2$ decreases with increasing multiplicity, while the experimental result shows an increase.
 %model missed important physics as the system becomes very small and the multiplicity very low, as is the case in p+p collisions, even though the initial T   does include initial state momentum anisotropies from the color glass condensate, as discussed in detail in [115]. arXiv:1908.06212 [nucl-th]. NEED to look further details.
 
+Finally, the results are compared to the GubsHyd model which is a toy semi-analytical model based on the analytical Gubser solution that can be used to shed light on the possible sources of the observed discrepancy between the above mentioned models and the measurements in pp collisions ~\cite{Taghavi:2019mqz}. In this model, instead of modeling the initial entropy density as typically done in T$_{\text{R}}$ENTo or IP-Glasma, the initial state fluctuation  is modeled directly. It assumes that ellipticity $\epsilon_{2}$ and RMS radius $r_{\text{rms}}$ fluctuate independently with widths $\sigma_{\epsilon}$
+ and $\sigma_{r}$, respectively. The multiplicity dependence of two-particle correlation functions $v_2\{2\}$ depends on $\sigma_{r}$ and  $\chi\sigma_{\epsilon}$ that can be obtained by comparing the model with data. The coefficient $\chi$ is fixed and encapsulates all the idealization of GubsHyd, including the absence of the dissipation effects. The calculations for the two sets of parameters are compared
+to the data in ~\ref{fig:vnmult_model}. The “param0” parametrization is based on the prediction in Ref.~\cite{Taghavi:2019mqz} with $\chi \sigma_{\epsilon}$ = 0.097 and $\sigma_{r}$ = 0.4[fm]. The other parametrization “param1” is with $\chi \sigma_{\epsilon}$ = 0.86 and $\sigma_{r}$ = 0.62[fm]. Both calculations capture the multiplicity dependence of $v_2$ well and the calculations with larger $\sigma_{r}$ and smaller $\chi \sigma_{\epsilon}$ are preferred by the data.
+ 
 %
 \begin{figure}[h!]
 	\centering
@@ -87,7 +91,7 @@ This model describes well the multiplicity dependence of $v_2$ in p--Pb collisio
 	\label{fig:v2multATLAS}
 \end{figure}
 
-The multiplicity dependent $v_2$ measurements in Fig.~\ref{fig:v2mult} are compared with the results published by the ATLAS Collaboration~\cite{Aaboud:2016yar}. In case of the ATLAS measurement, the flow extraction method is slightly different from our analysis where a fit was performed after subtraction with a ZYAM assumption on the LM-template and the charged particle multiplicity was obtained by counting the number of reconstructed particles satisfying $\pt>0.4$~GeV/$c$ in $|\eta|<$~2.5. The ATLAS results have no efficiency correction (labeled as ${N^\mathrm{rec}_{\mathrm{ch},ATLAS}}$), therefore the result needs to take into account the efficiency reported in Ref~\cite{ATLAS:2016yzd}, which are 1.29 $\pm$ 0.05 and 1.18 $\pm$ 0.05 for the p--Pb and pp collisions, respectively. In our analysis, the reference multiplicity is measured by integrating the $\dndeta$ in $|\eta|<0.5$ for each multiplicity percentile measured by the V0M and V0A in pp and p--Pb collisions, respectively. 
+The multiplicity dependent $v_2$ measurements in Fig.~\ref{fig:v2mult} are compared with the results published by the ATLAS Collaboration~\cite{Aaboud:2016yar}. In case of the ATLAS measurement, the flow extraction method is slightly different from our analysis where a fit was performed after subtraction with a ZYAM assumption on the LM-template and the charged particle multiplicity was obtained by counting the number of reconstructed particles satisfying $\pt>0.4$~GeV/$c$ in $|\eta|<$~2.5. The ATLAS results have no efficiency correction (labeled as ${N^\mathrm{rec}_{\mathrm{ch},ATLAS}}$), therefore the result needs to take into account the efficiency reported in Ref~\cite{ATLAS:2016yzd}, which are 1.29 $\pm$ 0.05 and 1.18 $\pm$ 0.05 for the p--Pb and pp collisions, respectively. In our analysis, the reference multiplicity is measured by integrating the $\dndeta$ in $|\eta|<0.5$ for each multiplicity percentile measured by the V0M and V0A in pp and p--Pb collisions, respectively. The ATLAS reference multiplicity definition is $|\eta|<2.5$ with $p_\mathrm{T}>0.4$ GeV/$c$ for both collision systems. 
 The measured ALICE multiplicity percentiles are converted to the ATLAS definition by integrating the $\dndeta$ results for $\pt>0.4$~GeV/$c$ in their respective $\eta$-ranges using EPOS LHC simulation. 
 The difference in multiplicity between the respective $\eta$-ranges, assuming that the $\eta$-distribution is flat. This is reduced to a factor of $\sim$three when requiring $p_\mathrm{T}>0.4$ GeV/c, i.e. a noticeable effect.
 The EPOS LHC does not match with the measurements completely in $|\eta|<$~0.8 and it is scaled to the measurements before the integration. Based on the studies in \cite{ALICE:Nchpt}, the measured ALICE $\dndeta$ within $|\eta|<$~0.8 with various $\pt$ cut-offs are comparable to the measurements by ATLAS and CMS as well as EPOS LHC simulations. Finally, the comparison of our results to ATLAS is shown in Fig.~\ref{fig:v2multATLAS} as a function of ${N_\mathrm{ch}}^\mathrm{reco}$.  
@@ -100,4 +104,4 @@ As a lower bound for the size of a hydrodynamized
 system where mainly the particles are emitted around the initial elliptic shape exists as predicted in Ref.~\cite{Taghavi:2019mqz}, there will be an transition of the flow signal but with the current experimental uncertainties and method it is still challenging to test its limit.
 
 
-Another complication can arise from the different sources of the multiplicity between the models and data.  The previous mapping of ALICE multiplicity and ATLAS gives a naive way to compare the relative difference in multiplicities between two experiments but the measured $v_n$ might be averaged over different events. As illustrated on the right of Fig.~\ref{fig:v2multATLAS}, the relative jet and bulk particle's yields vary with the measured $N_{ch}$. This results in lower $v_2$ value on average in low multiplicity events. While the data are compared to hydrodynamic model calculations which contain only bulk particles, the difference in $N_{ch}$ should be taken into account carefully and this work need further investigations and leave it for future work because it requires adequate treatments of jet and bulk particle productions.
+Another complication can arise from the different sources of the multiplicity between the models and data. The above-mentioned mapping of ALICE multiplicity to ATLAS gives a naive way to compare the relative difference in multiplicities between two experiments but the measured $v_n$ might be averaged over different events. As illustrated on the right of Fig.~\ref{fig:v2multATLAS}, the relative jet and bulk particle's yields vary with the measured $N_{ch}$. This results in lower $v_2$ value on average in low multiplicity events. While the data are compared to hydrodynamic model calculations which contain only bulk particles, the difference in $N_{ch}$ should be taken into account carefully and this work need further investigations and leave it for future work because it requires adequate treatments of jet and bulk particle productions in both experiment and theory.
