--- a/paper.tex
+++ b/paper.tex
@@ -36,8 +36,8 @@
 
 \begin{abstract}
 %\input{abstract.tex}
-Long- and short-range correlations for pairs of charged particles with two-particle angular correlations are studied in ${\sqrt{{\textit s}}}=13$~TeV pp and ${\sqrt{s_\mathrm{NN}}} = 5.02$~TeV p--Pb collisions. The correlation functions are measured as a function of relative azimuthal angle $\Delta\varphi$, and pseudorapidity separation $\Delta\eta$, using charged particles within the pseudorapidity interval $\eta < 0.9$ with 1~$ < \pt < $~4~GeV/$c$.
-Fourier coefficients extracted from the long-range correlations ($\Delta\eta > 1.6$) in various high-multiplicity classes are extracted from the low-multiplicity template fit method which allows one to subtract the enhanced away-side jet yields in high-multiplicity with respect to low-multiplicity events and is free from systematic biases originating from non-flow effects . These results set a lower limit of event multiplicity on the flow signal. Furthermore, the flow measurements with the requirement of hard probes such as jets or leading particles are presented. The results are compared to EPOS LHC, PYTHIA 8 calculations with string-shoving interactions, and hydrodynamic calculations.
+Long- and short-range correlations for pairs of charged particles with two-particle angular correlations are studied in pp at ${\sqrt{{\textit s}}}=13$~TeV and p--Pb collisions at ${\sqrt{s_\mathrm{NN}}} = 5.02$~TeV. The correlation functions are measured as functions of relative azimuthal angle $\Delta\varphi$ and pseudorapidity separation $\Delta\eta$ for pairs of primary charged particles within the pseudorapidity interval $|\eta| < 0.9$ and the transverse momentum interval 1~$ < \pt < $~4~GeV/$c$.
+Fourier coefficients are extracted for the long-range correlations ($1.6 < |\Delta\eta| <1.8$) in various high-multiplicity classes using the low-multiplicity template fit method. The method allows to subtract the enhanced away-side jet yields in high-multiplicity with respect to low-multiplicity events. Furthermore, it is free from systematic biases originating from non-flow effects. These results set a lower limit of event multiplicity on the flow signal. Furthermore, the flow measurements with the requirement of hard probes such as jets or leading particles are presented. The results are compared to EPOS LHC, PYTHIA 8 calculations with string-shoving interactions, and hydrodynamic calculations.
 % findings , physics conclusion.
 % discovery?
 
